# ClipFilePath

./: CMakeLists.txt  README.md
src/: main.cpp
src/func/: clip_file_path.cpp  clip_file_path.hpp
